<resources>
    <string name="app_name">MyMovieCatalogue4</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="poster">Poster</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="language_settings">Language Settings</string>
</resources>
